--- a/public/angularView/article.html
+++ b/public/angularView/article.html
@@ -1,27 +1,9 @@
-<div ng-controller="ArticleContentCtrl">
+<div >
 	<div ng-model="content" >
-		<div class="page-header" ><h1>{{content.headline}}</h1></div>
-		<div id="articleDescription" ng-mouseup="newmarkdown()">{{content.description}}</div>
-
+		<markdown>kfhs</markdown>
+		<div class="page-header" title={{content.headline}} ><h1>{{content.headline}}</h1></div>
+		<article></article>
 		<hr>
-
-		<div class="col-lg-12 ">	
-			<h3>Comments</h3>		
-				<ul class="list-group" >
-			      <li class="list-group-item" ng-repeat="comment in content.comments">{{comment}}</li>
-			    </ul>
-			<form role="form" method="post" ng-submit="submitComment(content._id)">
-
-		      <div class="form-group">
-		        <input type="text" class="form-control" id="comment" ng-model="form.comment" placeholder="Comment Here." >
-		      </div>
-		      
-		      <button type="submit" class="btn btn-default">Comment</button>
-		    </form>
-		</div>
-		
 	</div>
 </div> 
-
-
 
