--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Newsly : An example application to learn node.js, angular.js and MongoDB. This application helps user to read articles and highlight the text while reading and view the highlighted text later when needed.">
+    <title>Newsly by goelhimanshu</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Newsly</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Newsly</h1>
+        <p>An example application to learn node.js, angular.js and MongoDB. This application helps user to read articles and highlight the text while reading and view the highlighted text later when needed.</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/goelhimanshu/newsly">View on GitHub</a>
+        <p class="view"><a href="https://github.com/goelhimanshu/newsly">View the Project on GitHub <small>goelhimanshu/newsly</small></a></p>
 
-          <h1 id="project_title">Newsly</h1>
-          <h2 id="project_tagline">An example application to learn node.js, angular.js and MongoDB. This application helps user to read articles and highlight the text while reading and view the highlighted text later when needed.</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/goelhimanshu/newsly/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/goelhimanshu/newsly/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/goelhimanshu/newsly/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/goelhimanshu/newsly/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/goelhimanshu/newsly">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -63,17 +60,12 @@ $ git checkout gh-pages
 
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Newsly maintained by <a href="https://github.com/goelhimanshu">goelhimanshu</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/goelhimanshu">goelhimanshu</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
